# chain-semantic-splitter

./: README.md  pyproject.toml
src/chain_semantic_splitter/: __init__.py  splitter.py
